[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/Menu/EcranScore/SceneScoreUser.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Menu/EcranScore/EcranScore.gd" type="Script" id=2]
[ext_resource path="res://assets/HUD/bouton.png" type="Texture" id=3]
[ext_resource path="res://src/main/branques_theme.tres" type="Theme" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 72, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 120, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 144, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 168, 0, 24, 24 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="EcranScore" type="Node2D"]
position = Vector2( 53, 71 )
script = ExtResource( 2 )
NbPointPlayer1 = 75
NbPointPlayer2 = 54
NbPointPlayer4 = 87

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -52.0
margin_top = -74.0
margin_right = 942.0
margin_bottom = 489.0
color = Color( 0.431373, 0.478431, 0.509804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SceneScoreUser" parent="." instance=ExtResource( 1 )]

[node name="SceneScoreUser2" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 96 )
PlayerIndex = 2

[node name="SceneScoreUser3" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 188 )
PlayerIndex = 3

[node name="SceneScoreUser4" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 288 )
PlayerIndex = 4

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.025

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 430, 380 )
scale = Vector2( 5, 4 )
frames = SubResource( 9 )
frame = 7
playing = true

[node name="Press_Start_Label" type="Label" parent="."]
margin_left = 373.0
margin_top = 413.0
margin_right = 487.0
margin_bottom = 433.0
theme = ExtResource( 4 )
text = "Press start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerRetourEcranTitre" type="Timer" parent="."]
wait_time = 39.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="TimerRetourEcranTitre" to="." method="_on_TimerRetourEcranTitre_timeout"]
